tests/errors/max_bytes.asm
Function 3 must terminate with RET.
